--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 	<center>
-		<h4>Hello Pudla</h4>
+		<h3>Bienvenido a Pudla, la polla mundialista</h3>
+		<h4>Esperanos...</h4>
 	</center>
 </body>
 </html>
