--- a/user/index.html
+++ b/user/index.html
@@ -390,7 +390,7 @@
     <script src="../js/msg.js"></script>
     <script src="vendor/moment-with-locales.min.js"></script>
     <script src="vendor/moment-timezone-with-data.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js?id=1"></script>
     <!-- Vendors -->
     <script src="vendor/jquery.bpopup.js"></script>
     <script src="vendor/bower.json"></script>
