Update Places: Third and Fourth

--- a/user/index.html
+++ b/user/index.html
@@ -261,15 +261,15 @@
                         <li class="media">
                             <div class="circle-icon mr-4">3</div>
                             <div class="media-body">
-                                <h5>Tercer Lugar</h5>
-                                <p>Nombre del Equipo: </p>
+                                <h5>Bélgica</h5>
+                                <p>Tercer Lugar</p>
                             </div>
                         </li>
                         <li class="media my-4">
                             <div class="circle-icon mr-4">4</div>
                             <div class="media-body">
-                                <h5>Cuarto Lugar</h5>
-                                <p>Nombre del Equipo: </p>
+                                <h5>Inglaterra</h5>
+                                <p>Cuarto Lugar</p>
                             </div>
                         </li>
                     </ul>
