--- a/user/index.html
+++ b/user/index.html
@@ -85,7 +85,7 @@
     <header class="bg-gradient" id="home">
         <div class="container mt-5">
             <h1>
-                <span style="font-family: Baloo Kavoon, regular; ">Polla </span>Mundialista Pudla</h1>
+                <span style="font-family: Baloo Kavoon, regular; ">Polla </span>Mundialista Pudla 2018</h1>
             <p class="tagline" id="UserName"></p>
         </div>
         <div class="img-holder mt-3">
