First and Second Place

--- a/user/index.html
+++ b/user/index.html
@@ -247,15 +247,15 @@
                         <li class="media">
                             <div class="circle-icon mr-4">1</div>
                             <div class="media-body">
-                                <h5>Campeón de la Copa Mundial</h5>
-                                <p>Nombre del Equipo: </p>
+                                <h5>Francia</h5>
+                                <p>Campeón de la Copa Mundial Rusia 2018</p>
                             </div>
                         </li>
                         <li class="media my-4">
                             <div class="circle-icon mr-4">2</div>
                             <div class="media-body">
-                                <h5>Segundo Lugar</h5>
-                                <p>Nombre del Equipo: </p>
+                                <h5>Croacia</h5>
+                                <p>Segundo Lugar</p>
                             </div>
                         </li>
                         <li class="media">
